...
          </Text>
        </TouchableOpacity>
      }

      {/* 5. PROFILE TAB */}
      <TouchableOpacity
        testID="profile-tab"
        onPress={() => handleNavigate('profile')}
        style={styles.tabItem}>
        <Image
          source={require('@/assets/expo.icon/Assets/user.svg')}
          style={styles.icon}
          tintColor={activeRouteName === 'profile' ? colors.main : colors.textSecondary}
...
