...
            borderColor: errorMessage ? theme.error : theme.cardSeparator,
          },
        ]}
      >
        {/* Selector de Tipo (V, E, J, P) */}
        <TouchableOpacity
          testID="btn-select-doc-type"
          activeOpacity={0.7}
          onPress={() => setModalVisible(true)}
          style={[styles.typeButton, { borderRightColor: theme.cardSeparator }]}
        >
          <Text
            style={[
...
