appId: com.proyect1.ATIDental
---
- launchApp

- runFlow: common/login-user.yaml

# -----------------------------------

# Usamos el ID seguro en lugar del texto
- tapOn:
    id: "profile-tab"

# Hacemos scroll hasta el final de la página a la fuerza
- scroll
- scroll
- tapOn:
    id: "btn-lang-en"

- scroll
- tapOn:
    id: "btn-save"

# Quitamos la aserción estricta de texto porque la alerta puede salir en español o inglés por los milisegundos de retraso
# Solo esperamos a que aparezca el botón OK y lo presionamos
- extendedWaitUntil:
    visible: "OK"
    timeout: 10000
- tapOn: "OK"

# (Aserción removida: El título está arriba y tendríamos que hacer scroll. Lo comprobamos tras reiniciar)

# Forzamos cierre para probar que la memoria local funciona
- stopApp
- launchApp

# Esperamos a que el auto-login termine y cargue la barra inferior
- extendedWaitUntil:
    visible:
      id: "profile-tab"
    timeout: 60000

# Usamos el ID para volver a la pestaña de perfil (ahora la app arranca en inglés)
- tapOn:
    id: "profile-tab"

- assertVisible: "Profile & Language"

# Volvemos a ponerlo en Español haciendo scroll hacia abajo primero
- scroll
- scroll
- tapOn:
    id: "btn-lang-es"
- scroll
- tapOn:
    id: "btn-save"
- extendedWaitUntil:
    visible: "OK"
    timeout: 10000
- tapOn: "OK"

# -----------------------------------
- tapOn:
    id: "menu-btn"

- tapOn:
    id: "nav-item-logout"