appId: com.proyect1.ATIDental
---
- launchApp

- runFlow: common/login-admin.yaml

# 5. Abrir el menú lateral
- extendedWaitUntil:
    visible:
      id: "menu-btn"
    timeout: 50000

- tapOn:
    id: "menu-btn"

# 6. Tocar en la opción "Registrar Paciente" del menú lateral
- extendedWaitUntil:
    visible:
      id: "nav-item-register-patient"
    timeout: 50000

- tapOn:
    id: "nav-item-register-patient"

# 7. Esperar a que cargue el formulario de Registro de Paciente
- extendedWaitUntil:
    visible:
      id: "register-patient-screen"
    timeout: 50000

# =======================================================
# ESCENARIO 1: VALIDACIÓN DE CAMPOS OBLIGATORIOS VACÍOS
# =======================================================
- scrollUntilVisible:
    element:
      id: "btn-submit-patient"
    direction: DOWN
    timeout: 50000

- tapOn:
    id: "btn-submit-patient"

# Subir nuevamente porque el error aparece arriba bajo el nombre
- scrollUntilVisible:
    element:
      id: "input-full-name"
    direction: UP
    timeout: 50000

# Ahora que está visible en pantalla, verificar el mensaje de validación
- assertVisible: ".*(El nombre completo no puede estar vacío|Full name cannot be empty).*"

# =======================================================
# ESCENARIO 2: COMPLETAR EL FORMULARIO
# =======================================================
# Ya estamos arriba en el input-full-name
- tapOn:
    id: "input-full-name"
- inputText: "Maria Ciccolella"
- hideKeyboard
- tapOn:
    id: "btn-select-doc-type"
- extendedWaitUntil:
    visible:
      id: "doc-type-option-V"
    timeout: 50000
- tapOn:
    id: "doc-type-option-V"
- evalScript: ${output.docNumber = String(Math.floor(10000000 + Math.random() * 90000000))}
- tapOn:
    id: "input-document"
- inputText: ${output.docNumber}
- hideKeyboard

- scrollUntilVisible:
    element:
      id: "input-phone"
    direction: DOWN
    timeout: 50000

- tapOn:
    id: "input-phone"
- inputText: "+584141234567"
- hideKeyboard
- evalScript: ${output.patientEmail = "paciente_" + Date.now() + "@ejemplo.com"}
- tapOn:
    id: "input-email"
- inputText: ${output.patientEmail}
- hideKeyboard

# Scroll hacia abajo para los datos clínicos
- scrollUntilVisible:
    element:
      id: "input-allergies"
    direction: DOWN
    timeout: 50000

- tapOn:
    id: "input-allergies"
- inputText: "Penicilina"
- hideKeyboard

# =======================================================
# ESCENARIO 3: PERSISTENCIA Y FEEDBACK EXITOSO
# =======================================================
- scrollUntilVisible:
    element:
      id: "btn-submit-patient"
    direction: DOWN
    timeout: 50000

- tapOn:
    id: "btn-submit-patient"

# Esperar el Alert nativo de éxito de Firestore
- extendedWaitUntil:
    visible: ".*(Paciente registrado|Patient Registered).*"
    timeout: 50000

# Confirmar el modal de éxito
- tapOn: ".*(Listo|LISTO|Done|DONE|OK).*"

- tapOn:
    id: "menu-btn"

- tapOn:
    id: "nav-item-logout"